load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//tools:junit5.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FileWorkspaceTest",
    srcs = ["FileWorkspaceTest.kt"],
    data = ["//core/src/test/resources:file_workspaces"],
    friends = ["//core"],
    test_class = "com.squareup.spice.serialization.FileWorkspaceTest",
    deps = [
        "//model",
        "@maven//com/google/truth",
        "@maven//org/junit/jupiter:junit-jupiter-api",
    ],
)

kt_jvm_test(
    name = "IndexingTest",
    srcs = ["IndexingTest.kt"],
    friends = ["//core"],
    test_class = "com.squareup.spice.serialization.IndexingTest",
    deps = [
        "//model",
        "@maven//com/google/truth",
        "@maven//org/junit/jupiter:junit-jupiter-api",
    ],
)

kt_jvm_test(
    name = "ScaleTest",
    size = "medium",
    srcs = ["ScaleTest.kt"],
    data = ["//core/src/test/resources:file_workspaces"],
    friends = ["//core"],
    test_class = "com.squareup.spice.serialization.ScaleTest",
    deps = [
        "//model",
        "@maven//com/google/truth",
        "@maven//org/junit/jupiter:junit-jupiter-api",
    ],
)

kt_jvm_test(
    name = "SerializerTest",
    srcs = ["SerializerTest.kt"],
    friends = ["//core"],
    test_class = "com.squareup.spice.serialization.SerializerTest",
    deps = [
        "//model",
        "@maven//com/google/truth",
        "@maven//org/junit/jupiter:junit-jupiter-api",
    ],
)
