load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//tools:junit5.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "BreadthFirstDependencyVisitorTest",
    srcs = ["BreadthFirstDependencyVisitorTest.kt"],
    friends = ["//model"],
    test_class = "com.squareup.spice.model.traversal.BreadthFirstDependencyVisitorTest",
    deps = [
        "//model:test",
        "@maven//com/google/truth",
        "@maven//org/junit/jupiter:junit-jupiter-api",
    ],
)
